用户注册，登录，信息三个接口开发测试完毕
